--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,9 @@
 services:
   - type: web
     name: freescout
-    env: php
+    env: docker
     plan: free
-    buildCommand: |
-      composer install --no-dev --optimize-autoloader
-      php artisan key:generate --no-interaction
-      php artisan migrate --force
-      php artisan storage:link
-    startCommand: vendor/bin/heroku-php-apache2 public/
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: APP_ENV
         value: production
